chore: update files and improve things